[project]
name = "aioverse"
version = "0.1.1"
description = "基于aiohttp实现的openai请求库，支持工具调用+上下文管理+密钥轮询"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "aiohttp==3.13.3",
    "aiofiles==25.1.0",
    "tavily==1.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aioverse"]
